Add Fixed issue where Chrome 111 and later have different default allowed origins from v1.8.1

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "chrome-php/chrome",
+    "type": "package",
     "description": "Instrument headless chrome/chromium instances from PHP",
     "keywords": ["chrome", "chromium", "crawl", "browser", "headless", "screenshot", "pdf", "puppeteer"],
     "license": "MIT",
